fix(header.less): z-index in dropdown

--- a/css/main.css
+++ b/css/main.css
@@ -296,6 +296,8 @@ body ul li {
   text-decoration: none;
   color: white;
   transition: background-color 0.2s ease-out;
+  position: relative;
+  z-index: 1;
 }
 @media screen and (max-width: 1200px) {
   .header-text {
@@ -407,7 +409,7 @@ body ul li {
 }
 @media screen and (min-width: 1100px) {
   .dropdown-content-root {
-    z-index: -1;
+    z-index: 0;
     padding: 50px 0px 8px;
   }
 }
@@ -1539,4 +1541,4 @@ footer {
 .content-loaded {
   display: none;
 }
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=./main.css.map */
