--- a/less/header.less
+++ b/less/header.less
@@ -52,6 +52,9 @@
         color: white;
         transition: background-color 0.2s ease-out;
 
+        position: relative;
+        z-index: 1;
+
         @media screen and (max-width: 1200px) {
             font-size: 11px;
         }
@@ -178,7 +181,7 @@
 
     &-content-root {
         @media screen and (min-width: 1100px) {
-            z-index: -1;
+            z-index: 0;
             padding: 50px 0px 8px;
         }
     }
